Build using tsc instead of babel

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "jest",
     "lint": "eslint . --max-warnings 0",
     "fix": "eslint --fix .",
-    "build": "NODE_ENV=production babel src -d lib --copy-files",
+    "build": "tsc",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
     "contrib:check": "all-contributors check",
@@ -32,15 +32,15 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.0.0",
-    "@tophat/eslint-config": "^0.1.2",
+    "@tophat/eslint-config": "^0.3.1",
     "all-contributors-cli": "^6.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
@@ -48,9 +48,9 @@
     "immutable": "^4.0.0-rc.12",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "typescript": "^3.7.2"
   },
   "peerDependencies": {
     "immutable": ">=3.0.0",
