--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "test": "jest",
-    "lint": "eslint . --max-warnings 0",
-    "fix": "eslint --fix .",
+    "lint": "eslint --ext .ts,.tsx,.js . --max-warnings 0",
+    "fix": "eslint --ext .ts,.tsx,.js --fix .",
     "build": "tsc",
     "contrib:add": "all-contributors add",
     "contrib:generate": "all-contributors generate",
@@ -32,7 +32,13 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.2",
     "@tophat/eslint-config": "^0.3.1",
+    "@types/hoist-non-react-statics": "^3.3.1",
+    "@types/jest": "^24.0.23",
+    "@types/node": "^12.12.8",
+    "@types/react": "^16.9.11",
+    "@typescript-eslint/parser": "^2.7.0",
     "all-contributors-cli": "^6.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
