--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "jsx": "react",
     "target": "es5",
     "allowJs": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "lib": ["es2017"],
+    "noImplicitAny": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "strictNullChecks": true
   },
   "include": [
     "./src"
