--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/core": "^7.6.4",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.0.0",
-    "@tophat/eslint-config": "^0.2.1",
+    "@tophat/eslint-config": "^0.3.1",
     "all-contributors-cli": "^6.9.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -41,6 +41,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
