--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -6,9 +6,17 @@ update_configs:
     version_requirement_updates: "increase_versions"
     commit_message:
       prefix: "chore"
+    automerged_updates:
+      - match:
+        dependency_type: "development"
+        update_type: "in_range"
   - package_manager: "javascript"
     directory: "/website"
     update_schedule: "weekly"
     version_requirement_updates: "increase_versions"
     commit_message:
       prefix: "chore"
+    automerged_updates:
+      - match:
+        dependency_type: "all"
+        update_type: "in_range"
