--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.8.3",
-    "@tophat/eslint-config": "^0.5.0",
+    "@tophat/eslint-config": "^0.6.0",
     "all-contributors-cli": "^6.13.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "immutable": "^4.0.0-rc.12",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
