--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,11 @@ jobs:
       - name: Install React & Immutable  
         run: yarn add --dev react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }} immutable@${{ matrix.immutable-version }}
       - name: Test (React ${{ matrix.react-version}}, Immutable ${{ matrix.immutable-version }})
-        run: yarn test
+        run: yarn test --coverage
+      - uses: actions/upload-artifact@v2
+        with:
+          name: test-coverage
+          path: coverage
   coverage:
     runs-on: ubuntu-latest
     needs: test
@@ -44,7 +48,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Coverage
-        run: echo "Codecov"
-        # TODO: Codecov.
-
+      - uses: actions/download-artifact@v2
+        with:
+          name: test-coverage
+      - run: yarn coverage
