--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: node_modules/
+          key: ${{ runner.os }}-${{hashFiles('./yarn.lock')}}
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
       - name: Lint
         run: yarn lint
@@ -31,7 +37,13 @@ jobs:
             immutable-version: "^4.0.0-rc.1"
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: node_modules/
+          key: ${{ runner.os }}-${{hashFiles('./yarn.lock')}}
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
       - name: Install React & Immutable  
         run: yarn add --dev react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }} immutable@${{ matrix.immutable-version }}
@@ -46,7 +58,13 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: node_modules/
+          key: ${{ runner.os }}-${{hashFiles('./yarn.lock')}}
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn --frozen-lockfile
       - uses: actions/download-artifact@v2
         with:
@@ -56,7 +74,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: website/node_modules/
+          key: ${{ runner.os }}-${{hashFiles('./website/yarn.lock')}}
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         working-directory: website
         run: |
           yarn
@@ -74,7 +98,13 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: website-build
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: website/node_modules/
+          key: ${{ runner.os }}-${{hashFiles('./website/yarn.lock')}}
       - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         working-directory: website
         run: |
           yarn
